--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashMain">
@@ -18,8 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".AddParent" />
+        <activity android:name=".Categorie" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Play" />
+        <activity android:name=".Score" />
+        <activity android:name=".Resultat" />
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".PlayNmbr"></activity>
     </application>
 
 </manifest>
